--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "browser-fs-access": "^0.34.1",
     "daisyui": "^2.51.6",
     "fftshift": "^1.0.1",
+    "haversine-distance": "^1.2.1",
     "konva": "^8.3.14",
     "plotly.js": "^2.22.0",
     "postcss": "^8.4.23",
@@ -38,6 +39,8 @@
     "react-ga4": "^2.0.0",
     "react-hot-toast": "^2.4.1",
     "react-konva": "18.2.8",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-draw": "^0.20.4",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.11.1",
     "styled-components": "^5.3.5",
